--- a/assets/package.json
+++ b/assets/package.json
@@ -6,6 +6,8 @@
     "watch": "brunch watch --stdin"
   },
   "dependencies": {
+    "node-sass": "^4.7.2",
+    "npm": "^5.7.1",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html"
   },
@@ -13,6 +15,7 @@
     "babel-brunch": "6.1.1",
     "brunch": "2.10.9",
     "clean-css-brunch": "2.10.0",
+    "sass-brunch": "^1.9.1",
     "uglify-js-brunch": "2.10.0"
   }
 }
