--- a/assets/package.json
+++ b/assets/package.json
@@ -9,7 +9,9 @@
     "node-sass": "^4.7.2",
     "npm": "^5.7.1",
     "phoenix": "file:../deps/phoenix",
-    "phoenix_html": "file:../deps/phoenix_html"
+    "phoenix_html": "file:../deps/phoenix_html",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
   },
   "devDependencies": {
     "babel-brunch": "6.1.1",
