--- a/assets/package.json
+++ b/assets/package.json
@@ -14,7 +14,10 @@
     "react-dom": "^16.2.0"
   },
   "devDependencies": {
+    "babel": "^6.23.0",
     "babel-brunch": "6.1.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "brunch": "2.10.9",
     "clean-css-brunch": "2.10.0",
     "sass-brunch": "^1.9.1",
